--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,14 +6,12 @@ on:
     branches: [master]
 jobs:
   build:
-  deploy:
-    builds:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-node@v2
-        - name: Use Node.js version 16
-          with:
-            node-version: '16'
-        - run: npm install
-        - run: npm run build -- prefix client
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js version 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - run: npm install
+      - run: npm run build -- prefix client
